--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "emailjs-com": "^2.6.4",
     "vue": "^2.6.11",
+    "vue-analytics": "^5.22.1",
     "vue-i18n": "^8.24.4",
     "vue-router": "^3.2.0",
     "vue2-google-maps": "^0.10.7"
