--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.6.11",
     "vue-analytics": "^5.22.1",
     "vue-i18n": "^8.24.4",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
     "vue2-google-maps": "^0.10.7"
   },
